--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.dev.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:dev": "webpack-dev-server --config ./webpack.config.dev.js --content-base src/",
+    "build:dev": "webpack-dev-server --config ./webpack.config.dev.js ",
     "build": "webpack",
     "build:local": "webpack --env.NODE_ENV=local",
     "build:prod": "webpack -p --env.NODE_ENV=production"
